--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -429,6 +429,8 @@ $pattern-background-size: 25em;
 		&.featured {
 			display: block;
 			margin: 0 0 2em 0;
+			max-height: 481px;
+			overflow: hidden;
 
 			img {
 				display: block;
