--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1873,6 +1873,8 @@ input, select, textarea {
 		.image.featured {
 			display: block;
 			margin: 0 0 2em 0;
+			max-height: 481px;
+			overflow: hidden;
 		}
 
 			.image.featured img {
